style: add bg-color to body, style App.jsx & add Montserrat font

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./public/qau_white.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QHUTS</title>
+    <title>Q HUTS</title>
   </head>
-  <body>
+  <body class="bg-[#f1f3f6]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
